--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="cupcake">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube Assignment Design</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.6.4/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    
+    <header class="mt-5 mb-2"> 
+        <div class="navbar bg-base-100">
+            <div class="navbar-start">
+              <img src="Logo.png" alt="">
+            </div>
+            <div class="navbar-center">
+              <a class="btn normal-case text-xl">Sort by view</a>
+            </div>
+            <div class="navbar-end">
+              <!-- <button class="btn normal-case">Blog</button> -->
+              <a href="http://127.0.0.1:5500/text.html" class="btn normal-case text-xl text-white bg-[#FF1F3D]">Blog</a>
+            </div>
+        </div>
+    </header>
+    <hr>
+    <main>
+        <div class="tab-container w-full">
+            <div id="tab-container" class="tabs p-5 w-96 m-auto text-center flex justify-center">
+                <!-- <a class="tab">Tab 1</a> 
+                <a class="tab">Tab 2</a> 
+                <a class="tab">Tab 3</a> -->
+            </div>
+        </div>
+
+        <div id="card-container" class="grid grid-cols-1 sm:grid-cols-4 md:grid-cols-4 gap-2 p-2 ">
+            <!-- <div class="card w-96 bg-base-100 shadow-xl">
+            </div> -->
+
+        </div>
+
+    </main>
+    <footer>
+
+    </footer>
+
+
+    <script src="js/youtube.js"></script>
 </body>
 </html>
