--- a/text.html
+++ b/text.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Question Answer</title>
+    <title>Question & Answer</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.6.4/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -25,3 +25,5 @@
     <li>REST API : A REST API is an API that conforms to the design principles of the REST, or representational state transfer architectural style.</li>
 </body>
 </html>
+
+
