--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Youtube Assignment Design</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.6.4/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .verify-image img{
+            width: 25px;
+            height: 25px;
+        }
+    </style>
 </head>
 <body>
 
